--- a/business.html
+++ b/business.html
@@ -49,114 +49,78 @@
       </div>
     </header>
 
+    <!-- content -->
+
     <section class="text-gray-600 body-font overflow-hidden">
       <div class="container px-5 py-24 mx-auto">
-        <div class="-my-8 divide-y-2 divide-gray-100">
-          <div class="py-8 flex flex-wrap md:flex-nowrap">
-            <div class="md:w-64 md:mb-0 mb-6 flex-shrink-0 flex flex-col">
-              <span class="font-semibold title-font text-gray-700"
-                >CATEGORY</span
+        <div class="lg:w-4/5 mx-auto flex flex-wrap">
+          <div class="lg:w-4/2 w-full lg:pr-10 lg:py-6 mb-6 lg:mb-0">
+            <h2 class="text-sm title-font text-gray-500 tracking-widest">
+              @farmerdummy_004
+            </h2>
+            <h1 class="text-gray-100 text-3xl title-font font-medium mb-4">
+              farmer dummy
+            </h1>
+            <div class="flex mb-4">
+              <a class="flex-grow border-b-2 border-gray-100 py-2 text-lg px-1"
+                >Information</a
               >
-              <span class="mt-1 text-gray-500 text-sm">12 Jun 2019</span>
             </div>
-            <div class="md:flex-grow">
-              <h2 class="text-2xl font-medium text-gray-900 title-font mb-2">
-                Bitters hashtag waistcoat fashion axe chia unicorn
-              </h2>
-              <p class="leading-relaxed">
-                Glossier echo park pug, church-key sartorial biodiesel
-                vexillologist pop-up snackwave ramps cornhole. Marfa 3 wolf moon
-                party messenger bag selfies, poke vaporware kombucha
-                lumbersexual pork belly polaroid hoodie portland craft beer.
-              </p>
-              <a class="text-indigo-500 inline-flex items-center mt-4"
-                >Learn More
-                <svg
-                  class="w-4 h-4 ml-2"
-                  viewBox="0 0 24 24"
-                  stroke="currentColor"
-                  stroke-width="2"
-                  fill="none"
-                  stroke-linecap="round"
-                  stroke-linejoin="round"
-                >
-                  <path d="M5 12h14"></path>
-                  <path d="M12 5l7 7-7 7"></path>
-                </svg>
-              </a>
+            <p class="leading-relaxed mb-4">
+              Fam locavore kickstarter distillery. Mixtape chillwave tumeric
+              sriracha taximy chia microdosing tilde DIY. XOXO fam inxigo
+              juiceramps cornhole raw denim forage brooklyn. Everyday carry +1
+              seitan poutine tumeric. Gastropub blue bottle austin listicle
+              pour-over, neutra jean.
+            </p>
+            <div class="flex border-t border-gray-200 py-2">
+              <span class="text-white">Dairy Animals</span>
+              <span class="ml-auto text-gray-100">Cows</span>
+            </div>
+            <div class="flex border-t border-b mb-6 border-gray-200 py-2">
+              <span class="text-white">Product Quantity</span>
+              <span class="ml-auto text-gray-100">40 KG</span>
+            </div>
+            <div class="flex">
+              <span class="title-font font-medium text-3xl text-white-200"
+                >$4.00</span
+              >
+              <div class="flex ml-auto text-white border-0 py-2 px-6">
+                0000000000 , farmerdummy00@gmail.com
+              </div>
             </div>
           </div>
-          <div class="py-8 flex flex-wrap md:flex-nowrap">
-            <div class="md:w-64 md:mb-0 mb-6 flex-shrink-0 flex flex-col">
-              <span class="font-semibold title-font text-gray-700"
-                >CATEGORY</span
+
+          <div class="lg:w-4/2 w-full lg:pr-10 lg:py-6 mb-6 lg:mb-0">
+            <h2 class="text-sm title-font text-gray-500 tracking-widest"></h2>
+            <h1 class="text-gray-100 text-3xl title-font font-medium mb-4"></h1>
+            <div class="flex mb-4">
+              <a class="flex-grow border-b-2 border-gray-100 py-2 text-lg px-1"
+                >Information</a
               >
-              <span class="mt-1 text-gray-500 text-sm">12 Jun 2019</span>
             </div>
-            <div class="md:flex-grow">
-              <h2 class="text-2xl font-medium text-gray-900 title-font mb-2">
-                Meditation bushwick direct trade taxidermy shaman
-              </h2>
-              <p class="leading-relaxed">
-                Glossier echo park pug, church-key sartorial biodiesel
-                vexillologist pop-up snackwave ramps cornhole. Marfa 3 wolf moon
-                party messenger bag selfies, poke vaporware kombucha
-                lumbersexual pork belly polaroid hoodie portland craft beer.
-              </p>
-              <a class="text-indigo-500 inline-flex items-center mt-4"
-                >Learn More
-                <svg
-                  class="w-4 h-4 ml-2"
-                  viewBox="0 0 24 24"
-                  stroke="currentColor"
-                  stroke-width="2"
-                  fill="none"
-                  stroke-linecap="round"
-                  stroke-linejoin="round"
-                >
-                  <path d="M5 12h14"></path>
-                  <path d="M12 5l7 7-7 7"></path>
-                </svg>
-              </a>
+            <p class="leading-relaxed mb-4"></p>
+            <div class="flex border-t border-gray-200 py-2">
+              <span class="text-white">Dairy Animals</span>
+              <span class="ml-auto text-gray-100"></span>
             </div>
-          </div>
-          <div class="py-8 flex flex-wrap md:flex-nowrap">
-            <div class="md:w-64 md:mb-0 mb-6 flex-shrink-0 flex flex-col">
-              <span class="font-semibold title-font text-gray-700"
-                >CATEGORY</span
-              >
-              <span class="text-sm text-gray-500">12 Jun 2019</span>
+            <div class="flex border-t border-b mb-6 border-gray-200 py-2">
+              <span class="text-white">Product Quantity</span>
+              <span class="ml-auto text-gray-100"></span>
             </div>
-            <div class="md:flex-grow">
-              <h2 class="text-2xl font-medium text-gray-900 title-font mb-2">
-                Woke master cleanse drinking vinegar salvia
-              </h2>
-              <p class="leading-relaxed">
-                Glossier echo park pug, church-key sartorial biodiesel
-                vexillologist pop-up snackwave ramps cornhole. Marfa 3 wolf moon
-                party messenger bag selfies, poke vaporware kombucha
-                lumbersexual pork belly polaroid hoodie portland craft beer.
-              </p>
-              <a class="text-indigo-500 inline-flex items-center mt-4"
-                >Learn More
-                <svg
-                  class="w-4 h-4 ml-2"
-                  viewBox="0 0 24 24"
-                  stroke="currentColor"
-                  stroke-width="2"
-                  fill="none"
-                  stroke-linecap="round"
-                  stroke-linejoin="round"
-                >
-                  <path d="M5 12h14"></path>
-                  <path d="M12 5l7 7-7 7"></path>
-                </svg>
-              </a>
+            <div class="flex">
+              <span class="title-font font-medium text-3xl text-white-200">$</span>
+              </span>
+              <div class="flex ml-auto text-white border-0 py-2 px-6">
+                
+              </div>
             </div>
           </div>
         </div>
       </div>
     </section>
+
+    <!-- footer -->
 
     <footer class="text-gray-400 bg-gray-900 body-font">
       <div class="container px-5 py-24 mx-auto">
