added email setting

--- a/business.html
+++ b/business.html
@@ -86,7 +86,7 @@
                 >$4.00</span
               >
               <div class="flex ml-auto text-white border-0 py-2 px-6">
-                0000000000 , farmerdummy00@gmail.com
+                0000000000 , <a href="mailto:farmerdummy00@gmail.com">farmerdummy00@gmail.com</a>
               </div>
             </div>
           </div>
