--- a/index.html
+++ b/index.html
@@ -350,7 +350,7 @@
     <footer class="text-gray-400 bg-gray-900 body-font">
       <div class="container px-5 py-24 mx-auto">
         <div class="flex flex-wrap md:text-left text-center order-first">
-          <div class="lg:w-1/4 md:w-1/2 w-full px-4">
+          <div class="lg:w-1/3 md:w-1/2 w-full px-4">
             <h2
               class="title-font font-medium text-white tracking-widest text-sm mb-3"
             >
@@ -358,41 +358,36 @@
             </h2>
             <nav class="list-none mb-10">
               <li>
-                <a class="text-gray-400 hover:text-white">First Link</a>
+                <a class="mr-5 hover:text-white" a href="aboutus.html">ABOUT US</a>
               </li>
               <li>
-                <a class="text-gray-400 hover:text-white">Second Link</a>
-              </li>
-              <li>
-                <a class="text-gray-400 hover:text-white">Third Link</a>
-              </li>
-              <li>
-                <a class="text-gray-400 hover:text-white">Fourth Link</a>
-              </li>
+              <a class="mr-5 hover:text-white" a href="tips.html">TIPS</a>
+            </li>
+            <li>
+          <a class="mr-5 hover:text-white" a href="team.html">TEAM</a>
+        </li>
+        <li>
+        <button
+          class="inline-flex items-center bg-gray-800 border-0 py-1 px-3 focus:outline-none hover:bg-gray-700 rounded text-base mt-4 md:mt-0"
+        >
+          <a href="http://127.0.0.1:5500/login.html">Login</a>
+          <svg
+            fill="none"
+            stroke="currentColor"
+            stroke-linecap="round"
+            stroke-linejoin="round"
+            stroke-width="2"
+            class="w-4 h-4 ml-1"
+            viewBox="0 0 24 24"
+          >
+            <path d="M5 12h14M12 5l7 7-7 7"></path>
+          </svg>
+        </button>
+        </li>
+        </nav>
             </nav>
           </div>
-          <div class="lg:w-1/4 md:w-1/2 w-full px-4">
-            <h2
-              class="title-font font-medium text-white tracking-widest text-sm mb-3"
-            >
-              CATEGORIES
-            </h2>
-            <nav class="list-none mb-10">
-              <li>
-                <a class="text-gray-400 hover:text-white">First Link</a>
-              </li>
-              <li>
-                <a class="text-gray-400 hover:text-white">Second Link</a>
-              </li>
-              <li>
-                <a class="text-gray-400 hover:text-white">Third Link</a>
-              </li>
-              <li>
-                <a class="text-gray-400 hover:text-white">Fourth Link</a>
-              </li>
-            </nav>
-          </div>
-          <div class="lg:w-1/4 md:w-1/2 w-full px-4">
+          <div class="lg:w-1/3 md:w-1/2 w-full px-4">
             <h2
               class="title-font font-medium text-white tracking-widest text-sm mb-3"
             >
@@ -400,16 +395,16 @@
             </h2>
             <nav class="list-none mb-10">
               <li>
-                <a class="text-gray-400 hover:text-white">Sarthak Bhatt</a>
+                <a class="text-gray-400 hover:text-white">SARTHAK BHATT</a>
               </li>
               <li>
-                <a class="text-gray-400 hover:text-white">Ritik Rana</a>
+                <a class="text-gray-400 hover:text-white">RITIK RANA</a>
               </li>
               <li>
-                <a class="text-gray-400 hover:text-white">Gaurav</a>
+                <a class="text-gray-400 hover:text-white">GAURAV KUMAR</a>
               </li>
               <li>
-                <a class="text-gray-400 hover:text-white">Sonu</a>
+                <a class="text-gray-400 hover:text-white">SONU VERMA</a>
               </li>
             </nav>
           </div>
