--- a/aboutus.html
+++ b/aboutus.html
@@ -50,12 +50,12 @@
       </div>
     </header>
 
-    <section class="text-gray-600 body-font overflow-hidden">
+    <section class="text-gray-600 body-font overflow-hidden ">
       <div class="container px-5 py-24 mx-auto">
         <div class="-my-8 divide-y-2 divide-gray-100">
           <div class="py-8 flex flex-wrap md:flex-nowrap">
-            <div class="md:flex-grow">
-              <h1 class="text-2xl font-medium text-gray-900 title-font mb-2">
+            <div class="md:flex-grow text-xl">
+              <h1 class="text-4xl font-medium text-white-800 title-font mb-2">
                 Dairy Sector
               </h1>
               <img src="img/" alt="" />
@@ -116,8 +116,8 @@
             </div>
           </div>
           <div class="py-8 flex flex-wrap md:flex-nowrap">
-            <div class="md:flex-grow">
-              <h2 class="text-3xl font-medium text-gray-900 title-font mb-2">
+            <div class="md:flex-grow text-xl">
+              <h2 class="text-4xl font-medium text-gray-900 title-font mb-2">
                 Who We Are
               </h2>
               <img src="img/Who.jpg" alt="" class="imgg" />
@@ -149,8 +149,8 @@
             </div>
           </div>
           <div class="py-8 flex flex-wrap md:flex-nowrap">
-            <div class="md:flex-grow">
-              <h2 class="text-2xl font-medium text-gray-900 title-font mb-2">
+            <div class="md:flex-grow text-xl">
+              <h2 class="text-4xl font-medium text-gray-900 title-font mb-2">
                 What do we do
               </h2>
               <img src="img/what.jpg" alt="" class="imgg" />
@@ -240,7 +240,7 @@
                 <a class="text-gray-400 hover:text-white">Ritik Rana</a>
               </li>
               <li>
-                <a class="text-gray-400 hover:text-white">Gaurav</a>
+                <a class="text-gray-400 hover:text-white">Gaurav kumar</a>
               </li>
               <li>
                 <a class="text-gray-400 hover:text-white">Sonu</a>
