--- a/aboutus.html
+++ b/aboutus.html
@@ -54,8 +54,8 @@
       <div class="container px-5 py-24 mx-auto">
         <div class="-my-8 divide-y-2 divide-gray-100">
           <div class="py-8 flex flex-wrap md:flex-nowrap">
-            <div class="md:flex-grow text-xl">
-              <h1 class="text-4xl font-medium text-white-800 title-font mb-2">
+            <div class="md:flex-grow text-xl text-white">
+              <h1 class="text-4xl font-medium text-white title-font mb-2">
                 Dairy Sector
               </h1>
               <img src="img/" alt="" />
@@ -116,8 +116,8 @@
             </div>
           </div>
           <div class="py-8 flex flex-wrap md:flex-nowrap">
-            <div class="md:flex-grow text-xl">
-              <h2 class="text-4xl font-medium text-gray-900 title-font mb-2">
+            <div class="md:flex-grow text-xl text-white">
+              <h2 class="text-4xl font-medium text-white title-font mb-2">
                 Who We Are
               </h2>
               <img src="img/Who.jpg" alt="" class="imgg" />
@@ -149,8 +149,8 @@
             </div>
           </div>
           <div class="py-8 flex flex-wrap md:flex-nowrap">
-            <div class="md:flex-grow text-xl">
-              <h2 class="text-4xl font-medium text-gray-900 title-font mb-2">
+            <div class="md:flex-grow text-xl text-white">
+              <h2 class="text-4xl font-medium text-white title-font mb-2">
                 What do we do
               </h2>
               <img src="img/what.jpg" alt="" class="imgg" />
