--- a/business.html
+++ b/business.html
@@ -73,13 +73,13 @@
               seitan poutine tumeric. Gastropub blue bottle austin listicle
               pour-over, neutra jean.
             </p>
-            <div class="flex border-t border-gray-200 py-2">
-              <span class="text-white">Dairy Animals</span>
-              <span class="ml-auto text-gray-100">Cows</span>
+            <div class="flex border-t border-gray-200 py-2 ">
+              <span class="text-white ml-5">Dairy Animals</span>
+              <span class="ml-auto text-gray-100 mr-5">Cows</span>
             </div>
-            <div class="flex border-t border-b mb-6 border-gray-200 py-2">
-              <span class="text-white">Product Quantity</span>
-              <span class="ml-auto text-gray-100">40 KG</span>
+            <div class="flex border-t border-b mb-6 border-gray-200 py-2 ">
+              <span class="text-white ml-5">Product Quantity</span>
+              <span class="ml-auto text-gray-100 mr-5">40 KG</span>
             </div>
             <div class="flex">
               <span class="title-font font-medium text-3xl text-white-200"
@@ -101,11 +101,11 @@
             </div>
             <p class="leading-relaxed mb-4"></p>
             <div class="flex border-t border-gray-200 py-2">
-              <span class="text-white">Dairy Animals</span>
+              <span class="text-white ml-5">Dairy Animals</span>
               <span class="ml-auto text-gray-100"></span>
             </div>
             <div class="flex border-t border-b mb-6 border-gray-200 py-2">
-              <span class="text-white">Product Quantity</span>
+              <span class="text-white ml-5">Product Quantity</span>
               <span class="ml-auto text-gray-100"></span>
             </div>
             <div class="flex">
