--- a/farmer.html
+++ b/farmer.html
@@ -74,12 +74,12 @@
               pour-over, neutra jean.
             </p>
             <div class="flex border-t border-gray-200 py-2">
-              <span class="text-white">Particular animals</span>
-              <span class="ml-auto text-gray-100">Cows Milk</span>
+              <span class="text-white ml-5">Particular animals</span>
+              <span class="ml-auto text-gray-100 mr-5">Cows Milk</span>
             </div>
             <div class="flex border-t border-b mb-6 border-gray-200 py-2">
-              <span class="text-white">Quantity Required</span>
-              <span class="ml-auto text-gray-100">40 KG</span>
+              <span class="text-white ml-5">Quantity Required</span>
+              <span class="ml-auto text-gray-100 mr-5">40 KG</span>
             </div>
             <div class="flex">
               <span class="title-font font-medium text-3xl text-white-200"
@@ -101,12 +101,12 @@
             </div>
             <p class="leading-relaxed mb-4"></p>
             <div class="flex border-t border-gray-200 py-2">
-              <span class="text-white">Particular animals</span>
-              <span class="ml-auto text-gray-100"></span>
+              <span class="text-white ml-5">Particular animals</span>
+              <span class="ml-auto text-gray-100 mr-5"></span>
             </div>
             <div class="flex border-t border-b mb-6 border-gray-200 py-2">
-              <span class="text-white">Quantity Required</span>
-              <span class="ml-auto text-gray-100"></span>
+              <span class="text-white ml-5">Quantity Required</span>
+              <span class="ml-auto text-gray-100 mr-5"></span>
             </div>
             <div class="flex">
               <span class="title-font font-medium text-3xl text-white-200">$</span>
