--- a/aboutus.html
+++ b/aboutus.html
@@ -50,7 +50,7 @@
       </div>
     </header>
 
-    <section class="text-gray-600 body-font overflow-hidden ">
+    <section class="text-gray-600 body-font overflow-hidden">
       <div class="container px-5 py-24 mx-auto">
         <div class="-my-8 divide-y-2 divide-gray-100">
           <div class="py-8 flex flex-wrap md:flex-nowrap">
@@ -180,6 +180,196 @@
         </div>
       </div>
     </section>
+
+    <!-- bhatt -->
+
+    <div class="py-8 flex flex-wrap md:flex-nowrap">
+      <div class="md:flex-grow text-xl text-white">
+        <h2 class="text-4xl font-medium text-white title-font mb-2">
+          Problem Statement
+        </h2>
+        <br />
+        <img src="img/what.jpg" alt="" class="imgg1" />
+        <br />
+        <p class="leading-relaxed">
+          Online registration and processing of dairy farmers producing milk and
+          other livestock products
+        </p>
+        <p class="leading-relaxed">
+          India ranks first among the world’s milk producing Nations since 1998
+          and has the largest bovine population in the World. Milk production in
+          India during the period 1950-51 to 2017-18, has increased from 17
+          million tonnes to 176.4 million tonnes as compared to 165.4 million
+          tonnes during 2016-17 recording a growth of 6.65 %. FAO reported 1.46%
+          increase in world milk Production from 800.2 million tonnes in 2016 to
+          811.9(Estim) million tonnes in 2017. The per capita availability of
+          milk in the country which was 130 gram per day during 1950-51 has
+          increased to 374 gram per day in 2017-18 as against the world
+          estimated average consumption of 294 grams per day during 2017. This
+          represents sustained growth in the availability of milk and milk
+          products for our growing population. gDairying has become an important
+          secondary source of income for millions of rural families and has
+          assumed the most important role in providing employment and income
+          generating opportunities particularly for marginal and women farmers.
+          There is a need of Developing a mobile App for online processing and
+          registration of dairy farmers producing milk and other livestock
+          products organically. Such an app may help provide market linkage.
+        </p>
+      </div>
+    </div>
+
+    <div class="py-8 flex flex-wrap md:flex-nowrap">
+      <div class="md:flex-grow text-xl text-white">
+        <h2 class="text-4xl font-medium text-white title-font mb-2">
+          Our Solution
+        </h2>
+        <br />
+        <img src="img/what.jpg" alt="" class="imgg1" />
+        <br />
+        <p class="leading-relaxed">
+          We will create a portal for both dairy farmers and dairy product
+          organization. Increase the consumption of dairy product. Our website
+          is providing them a platform to fulfill the need of Farmers as well as
+          Organisation by providing frest milk on time for production. The
+          Farmers can register themselves in our website and the organisation
+          also registered themselves. Their will easy the Organisation and
+          Farmers to contact each other. "Purity and Fresh Product is the
+          Identity of our Website"
+        </p>
+      </div>
+    </div>
+
+    <div class="py-8 flex flex-wrap md:flex-nowrap">
+      <div class="md:flex-grow text-xl text-white">
+        <h2 class="text-4xl font-medium text-white title-font mb-2">
+          Benefits
+        </h2>
+        <br />
+        <img src="img/what.jpg" alt="" class="imgg1" />
+        <br />
+        <p class="leading-relaxed">
+          Farmers : •Farmers can register themselves at the portal and can list
+          their dairy products at the portal. •Sell their bulck products to
+          nearby diry product orgnistion center. Bussiness : •Organisation can
+          also register themselves at the portal and can list their products
+          quantity demands at the portal. •Organisation which deals in dairy
+          products and want the products in bulk can give the contract to the
+          farmers according to their needs.
+        </p>
+      </div>
+    </div>
+
+    <div class="py-8 flex flex-wrap md:flex-nowrap">
+      <div class="md:flex-grow text-xl text-white">
+        <h2 class="text-4xl font-medium text-white title-font mb-2">
+          Our team
+        </h2>
+        <br />
+        <img src="img/what.jpg" alt="" class="imgg1" />
+        <br />
+        <p class="leading-relaxed">
+          Sarthak Bhatt, Ritik Rana, Gaurav Kumar, Sonu Verma. know more about
+          team.&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+          <a class="mr-5 hover:text-white" a href="team.html">
+            <button
+              class="flex-shrink-0 text-white bg-indigo-500 border-0 py-2 px-8 focus:outline-none hover:bg-indigo-600 rounded text-lg mt-10 sm:mt-0"
+            >
+              lets go
+            </button>
+          </a>
+        </p>
+      </div>
+    </div>
+
+    <div class="py-8 flex flex-wrap md:flex-nowrap">
+      <div class="md:flex-grow text-xl text-white">
+        <h2 class="text-4xl font-medium text-white title-font mb-2">Future</h2>
+        <br />
+        <img src="img/what.jpg" alt="" class="imgg1" />
+        <br />
+        <p class="leading-relaxed">abs</p>
+      </div>
+    </div>
+
+    <div class="py-8 flex flex-wrap md:flex-nowrap">
+      <div class="md:flex-grow text-xl text-white">
+        <h2 class="text-4xl font-medium text-white title-font mb-2">
+          Up Coming features
+        </h2>
+        <br />
+        <img src="img/what.jpg" alt="" class="imgg1" />
+        <br />
+        <p class="leading-relaxed">xyz</p>
+      </div>
+    </div>
+    <!-- map -->
+
+    <section class="text-gray-600 body-font relative">
+      <div class="container px-5 py-24 mx-auto">
+        <div class="flex flex-col text-center w-full mb-12">
+          <h1
+            class="sm:text-3xl text-2xl font-medium title-font mb-4 text-white"
+          >
+            Contact Us
+          </h1>
+          <p class="lg:w-2/3 mx-auto leading-relaxed text-base text-white">
+            Whatever cardigan tote bag tumblr hexagon brooklyn asymmetrical
+            gentrify.
+          </p>
+        </div>
+        <div class="lg:w-1/2 md:w-2/3 mx-auto">
+          <div class="flex flex-wrap -m-2">
+            <div class="p-2 w-1/2">
+              <div class="relative">
+                <label for="name" class="leading-7 text-sm text-white"
+                  >Name</label
+                >
+                <input
+                  type="text"
+                  id="name"
+                  name="name"
+                  class="w-full bg-gray-300 rounded border border-gray-300 focus:border-indigo-500 focus:ring-2 focus:ring-indigo-200 text-base outline-none text-gray-700 py-1 px-3 leading-8 transition-colors duration-200 ease-in-out"
+                />
+              </div>
+            </div>
+            <div class="p-2 w-1/2">
+              <div class="relative">
+                <label for="email" class="leading-7 text-sm text-white"
+                  >Email</label
+                >
+                <input
+                  type="email"
+                  id="email"
+                  name="email"
+                  class="w-full bg-gray-300 rounded border border-gray-300 focus:border-indigo-500 focus:ring-2 focus:ring-indigo-200 text-base outline-none text-gray-700 py-1 px-3 leading-8 transition-colors duration-200 ease-in-out"
+                />
+              </div>
+            </div>
+            <div class="p-2 w-full">
+              <div class="relative">
+                <label for="message" class="leading-7 text-sm text-white"
+                  >Message</label
+                >
+                <textarea
+                  id="message"
+                  name="message"
+                  class="w-full bg-gray-300 rounded border border-gray-300 focus:border-indigo-500 focus:ring-2 focus:ring-indigo-200 h-32 text-base outline-none text-gray-700 py-1 px-3 leading-8 transition-colors duration-200 ease-in-out"
+                ></textarea>
+              </div>
+            </div>
+            <div class="p-2 w-full">
+              <button
+                class="flex mx-auto text-white bg-indigo-500 border-0 py-2 px-8 focus:outline-none hover:bg-indigo-600 rounded text-lg"
+              >
+                Button
+              </button>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <!-- footer -->
 
     <footer class="text-gray-400 bg-gray-900 body-font">
       <div class="container px-5 py-24 mx-auto">
