--- a/aboutus.html
+++ b/aboutus.html
@@ -182,15 +182,49 @@
     </section>
 
     <!-- bhatt -->
-
-    <div class="py-8 flex flex-wrap md:flex-nowrap">
-      <div class="md:flex-grow text-xl text-white">
-        <h2 class="text-4xl font-medium text-white title-font mb-2">
+    <div
+      class="max-w-3xl px-8 py-4 mx-auto bg-white rounded-lg shadow-md dark:bg-gray-800"
+    >
+      <div class="mt-2">
+        <a
+          class="text-2xl font-bold text-gray-700 dark:text-gray-400 hover:text-gray-600 dark:hover:text-gray-200"
+        >
           Problem Statement
-        </h2>
+        </a>
+        </div>>
         <br />
         <img src="img/what.jpg" alt="" class="imgg1" />
         <br />
+        <div
+          class="max-w-3xl px-8 py-4 mx-auto bg-white rounded-lg shadow-md dark:bg-gray-800"
+        >
+          <div class="mt-2">
+            <a
+              class="text-2xl font-bold text-gray-700 dark:text-gray-400 hover:text-gray-600 dark:hover:text-gray-200"
+              >Online registration and processing of dairy farmers producing
+              milk and other livestock products <br />
+              India ranks first among the world’s milk producing Nations since
+              1998 and has the largest bovine population in the World. Milk
+              production in India during the period 1950-51 to 2017-18, has
+              increased from 17 million tonnes to 176.4 million tonnes as
+              compared to 165.4 million tonnes during 2016-17 recording a growth
+              of 6.65 %. FAO reported 1.46% increase in world milk Production
+              from 800.2 million tonnes in 2016 to 811.9(Estim) million tonnes
+              in 2017. The per capita availability of milk in the country which
+              was 130 gram per day during 1950-51 has increased to 374 gram per
+              day in 2017-18 as against the world estimated average consumption
+              of 294 grams per day during 2017. This represents sustained growth
+              in the availability of milk and milk products for our growing
+              population. gDairying has become an important secondary source of
+              income for millions of rural families and has assumed the most
+              important role in providing employment and income generating
+              opportunities particularly for marginal and women farmers. There
+              is a need of Developing a mobile App for online processing and
+              registration of dairy farmers producing milk and other livestock
+              products organically. Such an app may help provide market linkage.
+            </a>
+          </div>
+        </div>
         <p class="leading-relaxed">
           Online registration and processing of dairy farmers producing milk and
           other livestock products
