--- a/regesterB.html
+++ b/regesterB.html
@@ -60,6 +60,7 @@
             Register As Business
           </h1>
         </div>
+        <form>
         <div class="lg:w-1/2 md:w-2/3 mx-auto">
           <div class="flex flex-wrap -m-2">
             <div class="p-2 w-1/2">
@@ -281,6 +282,7 @@
             </p>
           </div>
         </div>
+      </form>
       </div>
       <div class="bg-gray-800 bg-opacity-75">
         <div
