--- a/registerF.html
+++ b/registerF.html
@@ -59,6 +59,7 @@
             Register As Farmer
           </h1>
         </div>
+        <form>
         <div class="lg:w-1/2 md:w-2/3 mx-auto">
           <div class="flex flex-wrap -m-2">
             <div class="p-2 w-1/2">
@@ -175,6 +176,7 @@
             </div>
           </div>
         </div>
+        </form>
       </div>
     </section>
     <!-- footer -->
