--- a/regesterB.html
+++ b/regesterB.html
@@ -48,9 +48,9 @@
         </button>
       </div>
     </header>
-
+    
     <!-- content -->
-
+  
     <section class="text-gray-600 body-font relative">
       <div class="container px-5 py-24 mx-auto">
         <div class="flex flex-col text-center w-full mb-8">
@@ -181,7 +181,7 @@
       </div>
     </section>
     <!-- footer -->
-
+  <hr>
     <footer class="text-gray-400 bg-gray-900 body-font">
       <div class="container px-5 py-24 mx-auto">
         <div class="flex flex-wrap md:text-left text-center order-first">
@@ -241,7 +241,7 @@
                 <a class="text-gray-400 hover:text-white">Ritik Rana</a>
               </li>
               <li>
-                <a class="text-gray-400 hover:text-white">Gaurav</a>
+                <a class="text-gray-400 hover:text-white">Gaurav kumar</a>
               </li>
               <li>
                 <a class="text-gray-400 hover:text-white">Sonu</a>
