--- a/registerF.html
+++ b/registerF.html
@@ -180,7 +180,7 @@
       </div>
     </section>
     <!-- footer -->
-
+   <hr>
     <footer class="text-gray-400 bg-gray-900 body-font">
       <div class="container px-5 py-24 mx-auto">
         <div class="flex flex-wrap md:text-left text-center order-first">
@@ -240,7 +240,7 @@
                 <a class="text-gray-400 hover:text-white">Ritik Rana</a>
               </li>
               <li>
-                <a class="text-gray-400 hover:text-white">Gaurav</a>
+                <a class="text-gray-400 hover:text-white">Gaurav kumar</a>
               </li>
               <li>
                 <a class="text-gray-400 hover:text-white">Sonu</a>
