--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         class="container mx-auto flex flex-wrap p-5 flex-col md:flex-row items-center"
       >
         <a
-          class="flex title-font font-medium items-center text-white mb-4 md:mb-0"
+          class="flex title-font font-serif items-center text-white mb-4 md:mb-0"
         >
           <a href="index.html" class="active">
             <img src="img/photography.png" alt="logo" height="50" width="50"
@@ -27,7 +27,7 @@
           >
         </a>
         <nav
-          class="md:ml-auto flex flex-wrap items-center text-base justify-center"
+          class="md:ml-auto flex flex-wrap items-center text-base justify-center font-serif"
         >
           <a class="mr-5 hover:text-white" a href="aboutus.html">About Us</a>
           <a class="mr-5 hover:text-white" a href="tips.html">Tips</a>
@@ -35,7 +35,7 @@
         </nav>
 
         <button
-          class="inline-flex items-center bg-gray-800 border-0 py-1 px-3 focus:outline-none hover:bg-gray-700 rounded text-base mt-4 md:mt-0"
+          class="font-serif inline-flex items-center bg-gray-800 border-0 py-1 px-3 focus:outline-none hover:bg-gray-700 rounded text-base mt-4 md:mt-0"
         >
           <a href="http://127.0.0.1:5500/login.html">Login</a>
           <svg
