--- a/registerF.html
+++ b/registerF.html
@@ -23,7 +23,7 @@
           >
         </a>
         <nav
-          class="md:ml-auto flex flex-wrap items-center text-base justify-center"
+          class="md:ml-auto flex flex-wrap items-center text-base justify-center font-serif"
         >
           <a class="mr-5 hover:text-white" a href="aboutus.html">About Us</a>
           <a class="mr-5 hover:text-white" a href="tips.html">Tips</a>
@@ -31,7 +31,7 @@
         </nav>
 
         <button
-          class="inline-flex items-center bg-gray-800 border-0 py-1 px-3 focus:outline-none hover:bg-gray-700 rounded text-base mt-4 md:mt-0"
+          class=" font-serif inline-flex items-center bg-gray-800 border-0 py-1 px-3 focus:outline-none hover:bg-gray-700 rounded text-base mt-4 md:mt-0"
         >
           <a href="http://127.0.0.1:5500/login.html">Login</a>
           <svg
