--- a/aboutus.html
+++ b/aboutus.html
@@ -338,7 +338,7 @@
     </div>
     <!-- map -->
 
-    <section class="text-gray-600 body-font relative">
+    <section class="text-gray-600 body-font relative"id="second">
       <div class="container px-5 py-24 mx-auto">
         <div class="flex flex-col text-center w-full mb-12">
           <h1
