--- a/index.html
+++ b/index.html
@@ -64,7 +64,8 @@
               <br>
               <p class="leading-relaxed mb-8 text-white text-lg font-serif">“Do what you love to do, and be around things that make you smile. The cows make me smile every day.” </p>
               <div class="flex items-center flex-wrap pb-4 mb-4 border-b-2 border-gray-100 mt-auto w-full">
-                <a class="text-indigo-500 inline-flex items-center text-2xl">Lets Go
+              
+                <a class="text-indigo-500 inline-flex items-center text-2xl "href="#p1">Lets Go
                   <svg class="w-4 h-4 ml-2" viewBox="0 0 24 24" stroke="currentColor" stroke-width="2" fill="none" stroke-linecap="round" stroke-linejoin="round">
                     <path d="M5 12h14"></path>
                     <path d="M12 5l7 7-7 7"></path>
@@ -85,7 +86,7 @@
       </section>
     </header>
 
-<header class="header1"></header>
+<header class="header1"id="p1"></header>
 <br>
 
 <!-- sub content 1-->
@@ -101,7 +102,7 @@
     </div>
     </div>
 
-    <section class="text-gray-600 body-font">
+    <section class="text-gray-600 body-font ">
       <div class="container px-5 py-24 mx-auto">
         <div class="xl:w-1/2 lg:w-3/4 w-full mx-auto text-center">
           <svg
@@ -243,7 +244,7 @@
             </h2>
             <nav class="list-none mb-10">
               <li>
-                <a class="mr-5 hover:text-white" a href="aboutus.html">ABOUT US</a>
+                <a class="mr-5 hover:text-white" a href="aboutus.html#second">ABOUT US</a>
               </li>
               <li>
               <a class="mr-5 hover:text-white" a href="tips.html">TIPS</a>
