--- a/index.html
+++ b/index.html
@@ -310,9 +310,8 @@
               </div>
               <button
                 class="lg:mt-2 xl:mt-0 flex-shrink-0 inline-flex text-white bg-green-500 border-0 py-2 px-6 focus:outline-none hover:bg-green-600 rounded"
-              >
-                Press Me
-              </button>
+              ><a href="http://127.0.0.1:5500/aboutus.html">Press Me</a>
+             </button>
             </div>
           </div>
         </div>
