--- a/aboutus.html
+++ b/aboutus.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="main.css" />
   </head>
   <body style="background-color: #111827">
+
     <!-- header -->
 
     <header class="text-gray-400 bg-gray-900 body-font">
@@ -50,16 +51,28 @@
       </div>
     </header>
 
-    <section class="text-gray-600 body-font overflow-hidden">
-      <div class="container px-5 py-24 mx-auto">
-        <div class="-my-8 divide-y-2 divide-gray-100">
-          <div class="py-8 flex flex-wrap md:flex-nowrap">
-            <div class="md:flex-grow text-xl text-white">
-              <h1 class="text-4xl font-medium text-white title-font mb-2">
-                Dairy Sector
-              </h1>
-              <img src="img/" alt="" />
-              <p class="leading-relaxed">
+    <!-- content -->
+    <br /><br />
+    <div
+      class="max-w-6xl px-8 py-4 mx-auto bg-white rounded-lg shadow-md dark:bg-gray-800"
+    >
+      <div class="mt-2">
+        <br />
+<header class="header4"></header>
+        <br />
+        <div
+          class="max-w-6xl px-8 py-4 mx-auto bg-white rounded-lg shadow-md dark:bg-gray-800"
+        >
+          <div class="mt-2">
+            <a
+              class="text-4xl font-bold text-gray-700 dark:text-gray-400 hover:text-gray-600 dark:hover:text-gray-200"
+            >
+              Dairy Sector<br /><br />
+            </a>
+          </div>
+            <a
+              class="text-2xl font-normal text-gray-700 dark:text-gray-400 hover:text-gray-600 dark:hover:text-gray-200"
+            >
                 The dairy industry has been around for centuries; nevertheless,
                 it has undergone several transformations throughout history. In
                 ancient times, cheese was made from curdled milk or from the
@@ -114,95 +127,31 @@
                 dwellers who may only eat meat once a week or less12 .
               </p>
             </div>
-          </div>
-          <div class="py-8 flex flex-wrap md:flex-nowrap">
-            <div class="md:flex-grow text-xl text-white">
-              <h2 class="text-4xl font-medium text-white title-font mb-2">
-                Who We Are
-              </h2>
-              <img src="img/Who.jpg" alt="" class="imgg" />
-              <p class="leading-relaxed">
-                Milk is an important part of many people’s diets, but can be a
-                controversial one. In addition to being a major part of the food
-                industry and public health, milk comes from animals that are
-                milked by mammals. This is how the milk industry functions. The
-                milk is extracted from cows and goats and processed into dairy
-                products. Even though most people know that milk comes from
-                cows, it can be difficult to understand the complex nature of
-                this industry.
-              </p>
-              <br /><br />
-              <p>
-                The dairy industry is under pressure from consumers to eat less
-                or healthier versions of products containing milk proteins. This
-                has led to constant scrutiny of the dairy industry by
-                governments, non-profit organizations and media outlets. For
-                example, in 2015 the UK’s National Health Service launched a
-                campaign against high-fat dairy products called “Don’t Play with
-                your Food” because it promotes eating less fat. The goal of this
-                campaign is to encourage people to cut back on high-fat dairy
-                products like cheese and ice cream and choose lower-fat versions
-                instead. In response, dairy companies work closely with
-                governments to promote good nutritional habits while limiting
-                health warnings about eating too much dairy products.
-              </p>
-            </div>
-          </div>
-          <div class="py-8 flex flex-wrap md:flex-nowrap">
-            <div class="md:flex-grow text-xl text-white">
-              <h2 class="text-4xl font-medium text-white title-font mb-2">
-                What do we do
-              </h2>
-              <img src="img/what.jpg" alt="" class="imgg" />
-              <p class="leading-relaxed">
-                Glossier echo park pug, church-key sartorial biodiesel
-                vexillologist pop-up snackwave ramps cornhole. Marfa 3 wolf moon
-                party messenger bag selfies, poke vaporware kombucha
-                lumbersexual pork belly polaroid hoodie portland craft beer.
-              </p>
-              <a class="text-indigo-500 inline-flex items-center mt-4"
-                >Learn More
-                <svg
-                  class="w-4 h-4 ml-2"
-                  viewBox="0 0 24 24"
-                  stroke="currentColor"
-                  stroke-width="2"
-                  fill="none"
-                  stroke-linecap="round"
-                  stroke-linejoin="round"
-                >
-                  <path d="M5 12h14"></path>
-                  <path d="M12 5l7 7-7 7"></path>
-                </svg>
-              </a>
-            </div>
-          </div>
-        </div>
       </div>
-    </section>
-
-    <!-- bhatt -->
+    </div>
+    <br><br>
     <div
-      class="max-w-3xl px-8 py-4 mx-auto bg-white rounded-lg shadow-md dark:bg-gray-800"
+      class="max-w-6xl px-8 py-4 mx-auto bg-white rounded-lg shadow-md dark:bg-gray-800"
     >
       <div class="mt-2">
-        <a
-          class="text-2xl font-bold text-gray-700 dark:text-gray-400 hover:text-gray-600 dark:hover:text-gray-200"
-        >
-          Problem Statement
-        </a>
-        </div>>
         <br />
-        <img src="img/what.jpg" alt="" class="imgg1" />
+<header class="header2"></header>
         <br />
         <div
-          class="max-w-3xl px-8 py-4 mx-auto bg-white rounded-lg shadow-md dark:bg-gray-800"
+          class="max-w-6xl px-8 py-4 mx-auto bg-white rounded-lg shadow-md dark:bg-gray-800"
         >
           <div class="mt-2">
             <a
-              class="text-2xl font-bold text-gray-700 dark:text-gray-400 hover:text-gray-600 dark:hover:text-gray-200"
-              >Online registration and processing of dairy farmers producing
-              milk and other livestock products <br />
+              class="text-4xl font-bold text-gray-700 dark:text-gray-400 hover:text-gray-600 dark:hover:text-gray-200"
+            >
+              Problem Statement <br /><br />
+            </a>
+          </div>
+            <a
+              class="text-2xl font-normal text-gray-700 dark:text-gray-400 hover:text-gray-600 dark:hover:text-gray-200"
+            >
+              Online registration and processing of dairy farmers producing milk
+              and other livestock products <br /><br />
               India ranks first among the world’s milk producing Nations since
               1998 and has the largest bovine population in the World. Milk
               production in India during the period 1950-51 to 2017-18, has
@@ -225,42 +174,29 @@
             </a>
           </div>
         </div>
-        <p class="leading-relaxed">
-          Online registration and processing of dairy farmers producing milk and
-          other livestock products
-        </p>
-        <p class="leading-relaxed">
-          India ranks first among the world’s milk producing Nations since 1998
-          and has the largest bovine population in the World. Milk production in
-          India during the period 1950-51 to 2017-18, has increased from 17
-          million tonnes to 176.4 million tonnes as compared to 165.4 million
-          tonnes during 2016-17 recording a growth of 6.65 %. FAO reported 1.46%
-          increase in world milk Production from 800.2 million tonnes in 2016 to
-          811.9(Estim) million tonnes in 2017. The per capita availability of
-          milk in the country which was 130 gram per day during 1950-51 has
-          increased to 374 gram per day in 2017-18 as against the world
-          estimated average consumption of 294 grams per day during 2017. This
-          represents sustained growth in the availability of milk and milk
-          products for our growing population. gDairying has become an important
-          secondary source of income for millions of rural families and has
-          assumed the most important role in providing employment and income
-          generating opportunities particularly for marginal and women farmers.
-          There is a need of Developing a mobile App for online processing and
-          registration of dairy farmers producing milk and other livestock
-          products organically. Such an app may help provide market linkage.
-        </p>
       </div>
     </div>
-
-    <div class="py-8 flex flex-wrap md:flex-nowrap">
-      <div class="md:flex-grow text-xl text-white">
-        <h2 class="text-4xl font-medium text-white title-font mb-2">
-          Our Solution
-        </h2>
+<br><br>
+    <div
+      class="max-w-6xl px-8 py-4 mx-auto bg-white rounded-lg shadow-md dark:bg-gray-800"
+    >
+      <div class="mt-2">
         <br />
-        <img src="img/what.jpg" alt="" class="imgg1" />
+<header class="header3"></header>
         <br />
-        <p class="leading-relaxed">
+        <div
+          class="max-w-6xl px-8 py-4 mx-auto bg-white rounded-lg shadow-md dark:bg-gray-800"
+        >
+          <div class="mt-2">
+            <a
+              class="text-4xl font-bold text-gray-700 dark:text-gray-400 hover:text-gray-600 dark:hover:text-gray-200"
+            >
+              Our Solution <br /><br />
+            </a>
+          </div>
+            <a
+              class="text-2xl font-normal text-gray-700 dark:text-gray-400 hover:text-gray-600 dark:hover:text-gray-200"
+            >
           We will create a portal for both dairy farmers and dairy product
           organization. Increase the consumption of dairy product. Our website
           is providing them a platform to fulfill the need of Farmers as well as
@@ -273,37 +209,63 @@
       </div>
     </div>
 
-    <div class="py-8 flex flex-wrap md:flex-nowrap">
-      <div class="md:flex-grow text-xl text-white">
-        <h2 class="text-4xl font-medium text-white title-font mb-2">
-          Benefits
-        </h2>
+    <div
+      class="max-w-6xl px-8 py-4 mx-auto bg-white rounded-lg shadow-md dark:bg-gray-800"
+    >
+      <div class="mt-2">
         <br />
-        <img src="img/what.jpg" alt="" class="imgg1" />
+<header class="header5"></header>
         <br />
-        <p class="leading-relaxed">
+        <div
+          class="max-w-6xl px-8 py-4 mx-auto bg-white rounded-lg shadow-md dark:bg-gray-800"
+        >
+          <div class="mt-2">
+            <a
+              class="text-4xl font-bold text-gray-700 dark:text-gray-400 hover:text-gray-600 dark:hover:text-gray-200"
+            >
+              Benefits <br /><br />
+            </a>
+          </div>
+            <a
+              class="text-2xl font-normal text-gray-700 dark:text-gray-400 hover:text-gray-600 dark:hover:text-gray-200"
+            >
           Farmers : •Farmers can register themselves at the portal and can list
           their dairy products at the portal. •Sell their bulck products to
-          nearby diry product orgnistion center. Bussiness : •Organisation can
-          also register themselves at the portal and can list their products
-          quantity demands at the portal. •Organisation which deals in dairy
-          products and want the products in bulk can give the contract to the
-          farmers according to their needs.
+          nearby diry product orgnistion center.<br> <br>
+          Bussiness : •Organisation cancalso register themselves at the portal and can list their products quantity demands at the portal. •Organisation which deals in dairy
+          products and want the products in bulk can give the contract to the farmers according to their needs.
         </p>
       </div>
     </div>
+    </div>
+    </div>
+    <br><br>
 
-    <div class="py-8 flex flex-wrap md:flex-nowrap">
-      <div class="md:flex-grow text-xl text-white">
-        <h2 class="text-4xl font-medium text-white title-font mb-2">
-          Our team
-        </h2>
+    <div
+      class="max-w-6xl px-8 py-4 mx-auto bg-white rounded-lg shadow-md dark:bg-gray-800"
+    >
+      <div class="mt-2">
         <br />
-        <img src="img/what.jpg" alt="" class="imgg1" />
+<header class="header6"></header>
         <br />
-        <p class="leading-relaxed">
-          Sarthak Bhatt, Ritik Rana, Gaurav Kumar, Sonu Verma. know more about
-          team.&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+        <div
+          class="max-w-6xl px-8 py-4 mx-auto bg-white rounded-lg shadow-md dark:bg-gray-800"
+        >
+          <div class="mt-2">
+            <a
+              class="text-4xl font-bold text-gray-700 dark:text-gray-400 hover:text-gray-600 dark:hover:text-gray-200"
+            >
+              Our Team <br /><br />
+            </a>
+          </div>
+            <a
+              class="text-2xl font-normal text-gray-700 dark:text-gray-400 hover:text-gray-600 dark:hover:text-gray-200"
+            >
+          Sarthak Bhatt,<br> 
+          Ritik Rana,<br>
+          Gaurav Kumar,<br> 
+          Sonu Verma.<br>    
+          &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;know more about team.&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
           <a class="mr-5 hover:text-white" a href="team.html">
             <button
               class="flex-shrink-0 text-white bg-indigo-500 border-0 py-2 px-8 focus:outline-none hover:bg-indigo-600 rounded text-lg mt-10 sm:mt-0"
@@ -314,31 +276,38 @@
         </p>
       </div>
     </div>
-
-    <div class="py-8 flex flex-wrap md:flex-nowrap">
-      <div class="md:flex-grow text-xl text-white">
-        <h2 class="text-4xl font-medium text-white title-font mb-2">Future</h2>
-        <br />
-        <img src="img/what.jpg" alt="" class="imgg1" />
-        <br />
-        <p class="leading-relaxed">abs</p>
+    </div>
+  </div>
+  
+<!--  <div
+  class="max-w-6xl px-8 py-4 mx-auto bg-white rounded-lg shadow-md dark:bg-gray-800"
+>
+  <div class="mt-2">
+    <br />
+<header class="header7"></header>
+    <br />
+    <div
+      class="max-w-6xl px-8 py-4 mx-auto bg-white rounded-lg shadow-md dark:bg-gray-800"
+    >
+      <div class="mt-2">
+        <a
+          class="text-4xl font-bold text-gray-700 dark:text-gray-400 hover:text-gray-600 dark:hover:text-gray-200"
+        >
+          Up Coming Features/Events<br /><br />
+        </a>
+      </div>
+        <a
+          class="text-2xl font-normal text-gray-700 dark:text-gray-400 hover:text-gray-600 dark:hover:text-gray-200"
+        >xyz</p>
       </div>
     </div>
+  </div>
+</div> 
+<br /><br />  -->
 
-    <div class="py-8 flex flex-wrap md:flex-nowrap">
-      <div class="md:flex-grow text-xl text-white">
-        <h2 class="text-4xl font-medium text-white title-font mb-2">
-          Up Coming features
-        </h2>
-        <br />
-        <img src="img/what.jpg" alt="" class="imgg1" />
-        <br />
-        <p class="leading-relaxed">xyz</p>
-      </div>
-    </div>
-    <!-- map -->
+    <!-- feedback -->
 
-    <section class="text-gray-600 body-font relative"id="second">
+    <section class="text-gray-600 body-font relative" id="second">
       <div class="container px-5 py-24 mx-auto">
         <div class="flex flex-col text-center w-full mb-12">
           <h1
