--- a/reg.html
+++ b/reg.html
@@ -80,7 +80,7 @@
           >
             A Registration Form To Access Web-Site Smoothly For Only Businesses.
           </h1>
-          <a href="regesterB.html">
+          <a href="regesterB.php">
             <button
               class="flex-shrink-0 text-white bg-indigo-500 border-0 py-2 px-8 focus:outline-none hover:bg-indigo-600 rounded text-lg mt-10 sm:mt-0"
             >
